# rocket-diesel

./: Cargo.toml
migrations/2022-01-05-233833_users/: up.sql
src/: db.rs  lib.rs  schema.rs  user.rs
