[package]
name = "rust-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"

rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_contrib = "0.4.10"
rocket_cors = "0.5.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

diesel = { version = "1.4.8", features = ["mysql", "r2d2"]}

# [dependencies.rocket_contrib]
# version = "*"
# default-features = false
# features = ["json"]